k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmg-api-svc
  namespace: kmg-ns
spec:
  type: ClusterIP
  selector:
    app: kmg-api
  ports:
    - port: 8000
      targetPort: 8000
