k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmg-db-svc
  namespace: kmg-ns
spec:
  type: ClusterIP
  selector:
    app: kmg-db
  ports:
    - port: 5432
      targetPort: 5432
