k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kmg-ingress
  namespace: kmg-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: kmg-tls-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kmg-api-svc
                port:
                  number: 8000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kmg-frontend-svc
                port:
                  number: 80
